# stm-chans

./: AUTHORS  CHANGELOG  LICENSE  README  README.md  Setup.hs  TODO  VERSION  stm-chans.cabal
.github/workflows/: ci.yml
src/Control/Concurrent/STM/: TBChan.hs  TBChan2.hs  TBMChan.hs  TBMChan1.hs  TBMChan2.hs  TBMQueue.hs  TMChan.hs  TMQueue.hs
src/Control/Concurrent/STM/TBQueue/: Compat.hs
src/Control/Concurrent/STM/TChan/: Compat.hs
src/Control/Concurrent/STM/TMVar/: Compat.hs
src/Control/Concurrent/STM/TQueue/: Compat.hs
src/Control/Concurrent/STM/TVar/: Compat.hs
test/bench/: TBChanBench.hs  stm-chans-bench.cabal
test/bench/Control/Concurrent/STM/: TBChan1.hs  TBMChan1.hs
