----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2021.10.17
----------------------------------------------------------------

-- Cabal >=1.10 is required by Hackage.
Cabal-Version:  >= 1.10
Build-Type:     Simple

Name:           stm-chans-bench
Version:        1.2.0
Stability:      experimental
Copyright:      Copyright (c) 2011–2021 wren gayle romano
License:        BSD3
License-File:   ../../LICENSE
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/stm-chans/issues
Category:       Concurrency
Synopsis:       Additional types of channels for STM.
Description:    Additional types of channels for STM.

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/stm-chans.git

----------------------------------------------------------------
Flag threaded
    Default: True
    Description: Compile with support for enabling the use of
        multiple OS threads, in order to take advantage of parallelism
        on a multiprocessor or multicore machine. Note that this
        flag is not required in order to enable (single OS-threaded)
        concurrency of Haskell lightweight threads. This pases
        -threaded to GHC which enables various RTS flags for 
        configuring the number of OS threads, etc.

----------------------------------------------------------------
Executable bench-TBChan
    Default-Language: Haskell2010
    GHC-Options: -fforce-recomp
    if flag(threaded)
        GHC-Options: -threaded
    
    Build-Depends: base      >= 4.1 && < 5
                 , stm       >= 2.1.1
                 , stm-chans >= 1.2.0
                 , criterion >= 0.5.0
    
    Hs-Source-Dirs: .
    Main-Is:        TBChanBench.hs
    GHC-Options:    -main-is TBChanBench.main

----------------------------------------------------------------
----------------------------------------------------------- fin.
